# stackchan-mcp-yorishiro

./: .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  README.ja.md  README.md
.github/workflows/: build.yml  firmware-release.yml  publish.yml
docs/: phase-a-report.md  phase-b-report.md  phase-c-report.md  phase-d-report.md  phase-e-report.md  phase-f-report.md
docs/deploy/: stackchan-gateway.service
docs/deploy/stackchan-gateway.service.d/: heartbeat.conf  local-llm.conf
docs/worklog/: 2026-06-10-phase-b-voice.md  2026-06-11-phase-c.md  2026-06-11-phase-d-autonomy.md  2026-06-12-phase-e-notify-heartbeat.md  2026-06-13-c1-prox-reflex.md  2026-06-13-phase-f-dashboard.md  2026-06-14-cc-notify-dashboard-toggle.md  2026-06-14-flash-e2e.md  2026-06-14-phase1-dashboard-sections.md  2026-06-14-phase2-brightness-led.md  2026-06-14-phase3-proximity-led.md  2026-06-14-review-cleanup.md  2026-06-14-wakeword-diagnosis-neckpose.md
examples/cloudflare-relay/: README.md  package.json  wrangler.toml
examples/cloudflare-relay/docs/: secret-rotation.md  setup.md
examples/cloudflare-relay/src/: index.ts
firmware/: .gitignore  CMakeLists.txt
firmware/main/: CMakeLists.txt  Kconfig.projbuild  application.cc  mcp_server.cc  mcp_server.h
firmware/main/audio/wake_words/: custom_wake_word.cc  custom_wake_word.h
firmware/main/boards/common/: board.h  wifi_board.cc
firmware/main/boards/stackchan/: config.json  cores3_audio_codec.cc  cores3_audio_codec.h  stackchan.cc
firmware/main/protocols/: mdns_gateway_discovery.cc  mdns_gateway_discovery.h  websocket_protocol.cc  websocket_protocol.h
firmware/scripts/: release.py
firmware/scripts/avatar_convert/: convert_avatars.py
gateway/: LICENSE  README.md  pyproject.toml
gateway/stackchan_mcp/: __main__.py  audio_stream.py  capture_server.py  cli.py  control.py  esp32_client.py  event_log.py  gateway.py  heartbeat.py  hermes_bridge.py  http_server.py  local_llm.py  mdns_advertiser.py  notes.py  stdio_server.py  switchbot.py  weather.py  web_search.py
gateway/stackchan_mcp/tts/: __init__.py  audio_utils.py  base.py  orchestrator.py  voicevox.py
gateway/tests/: _audio_fixtures.py  test_audio_stream.py  test_audio_utils.py  test_cli.py  test_control.py  test_esp32_client.py  test_event_log.py  test_gateway.py  test_heartbeat.py  test_hermes_bridge.py  test_http_server.py  test_local_llm.py  test_mdns_advertiser.py  test_notes.py  test_orchestrator.py  test_stdio_server.py  test_switchbot.py  test_tts_framework.py  test_voicevox.py  test_weather.py  test_web_search.py
tasks/: todo-archive-2026Q2.md  todo.md
