[project]
name = "stackchan-mcp"
version = "0.4.0"
description = "Two-faced MCP gateway for StackChan (xiaozhi-esp32): bridges stdio MCP clients to the ESP32 over WebSocket + HTTP."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "kisaragi-mochi" },
]
keywords = ["mcp", "stackchan", "esp32", "xiaozhi", "robotics", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Communications",
    "Topic :: System :: Hardware",
]
dependencies = [
    "websockets>=12",
    "pydantic>=2",
    "python-dotenv",
    "mcp>=1.0",
    "aiohttp>=3",
]

[project.urls]
Homepage = "https://github.com/kisaragi-mochi/stackchan-mcp"
Repository = "https://github.com/kisaragi-mochi/stackchan-mcp"
Issues = "https://github.com/kisaragi-mochi/stackchan-mcp/issues"

[project.scripts]
stackchan-mcp = "stackchan_mcp.cli:main"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff>=0.15.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
